syntax = "proto3";

option go_package = "genproto/protos";

package protos;

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string message = 2;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {
    string message = 1;
}

message RefreshTokenRequest {
    string token = 1;
}

message RefreshTokenResponse {
    string newToken = 1;
    string message = 2;
}
